--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^17.2.2",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.6.0",
+    "framer-motion": "^12.33.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "moment": "^2.30.1",
@@ -71,7 +72,6 @@
     "tone": "^15.1.22",
     "workbox-webpack-plugin": "^7.3.0",
     "zustand": "^5.0.8"
-    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
